2009-02-25  Jay Campan  <jcampan@google.com>

Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=24066

        Items in drop-downs were not painted correctly.  Makes sure the
        PopupListBox invalidates in the coordinates of the window as this is
        FramelessScrollView::invalidateRect paints to.

        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupListBox::invalidateRow):



git-svn-id: svn://svn.chromium.org/blink/trunk@41212 bbb929c8-8fbe-4397-9dbb-9b2b20218538